...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/xsolla_base_16"
                    android:paddingBottom="@dimen/xsolla_base_16"
                    android:textSize="@dimen/xsolla_textMedium"
                    android:text="Product - PlaceHolder"
                    android:id="@+id/tvProductName"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/xsolla_divider"/>
                <LinearLayout
...
